Code refractor